fix(ChainSplitPaneTest): initialize field in start method